--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "*", features = ["derive"] }
-serde_json="*"
-image="*"
+serde_json="1.0.40"
+image="0.22"
+getopts="0.2.21"
