--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ image = "0.22"
 minidom = "0.11.0"
 serde = {version = "*", features = ["derive"]}
 serde_json = "1.0.40"
+failure = "0.1.8"
+failure_derive = "0.1.8"
