--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ name = "texture-unpacker"
 version = "0.1.0"
 
 [dependencies]
-getopts = "0.2.21"
-image = "0.22"
-minidom = "0.11.0"
-serde = {version = "*", features = ["derive"]}
-serde_json = "1.0.40"
 failure = "0.1.8"
 failure_derive = "0.1.8"
+getopts = "0.2.21"
+image = "0.22"
+serde = { version = "1.0.115", features = ["derive"] }
+serde-xml-rs = "0.4.0"
+serde_json = "1.0.40"
