--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ version = "0.1.0"
 [dependencies]
 failure = "0.1.8"
 failure_derive = "0.1.8"
-getopts = "0.2.21"
 image = "0.22"
-serde = { version = "1.0.115", features = ["derive"] }
+serde = {version = "1.0.115", features = ["derive"]}
 serde-xml-rs = "0.4.0"
 serde_json = "1.0.40"
+structopt = "0.3.16"
